--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -4,7 +4,6 @@ on: [push]
 jobs:
     run-shell-commands:
         runs-on: ubuntu-latest
-
         steps:
             - name: echo a string a
               run: echo "Hello World"
@@ -12,3 +11,18 @@ jobs:
               run: |
                 node -v
                 npm -v
+
+    parallel-job-macos:
+        runs-on: macos-latest
+        steps:
+            - name: view sw version
+              run: sw-vers
+    
+    dependant-job:
+        runs-on: windows-latest
+        needs: run-shell-commands
+        steps:
+            - name: echo string 
+              run: Write-Output "Windows String"
+            - name: error step
+              run: doesnotexist
