--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -16,7 +16,7 @@ jobs:
         runs-on: macos-latest
         steps:
             - name: view sw version
-              run: sw-vers
+              run: sw_vers
     
     dependant-job:
         runs-on: windows-latest
