--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -8,3 +8,12 @@ jobs:
         steps:
             - name: Setting an error message
               run: echo "::error::Missing semicolon"
+
+            - name: Setting an error message with params
+              run: echo "::error title:error title, file=app.js, line=2, endLine=4, col=5, endColumns=7::Missing Semicolon"
+            
+            - name: Setting a debug message
+              run: echo "::debug title:Debug title, file=app.js, line=2, endLine=4, col=5, endColumns=7::Missing Semicolon"
+            
+            - name: Setting a warning message
+              run: echo "::warning title:warning title, file=app.js, line=2, endLine=4, col=5, endColumns=7::Missing Semicolon"
