--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -10,7 +10,7 @@ jobs:
               run: echo "::error::Missing semicolon"
 
             - name: Setting an error message with params
-              run: echo "::error title=Error title, file=app.js, line=2, endLine=4, col=5, endColumns=7::Missing Semicolon"
+              run: echo "::error title=Error title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"
             
             - name: Setting a debug message
               run: echo "::debug title:Debug title, file=app.js, line=2, endLine=4, col=5, endColumns=7::Missing Semicolon"
