--- a/.github/workflows/working-dir-and-shells.yml
+++ b/.github/workflows/working-dir-and-shells.yml
@@ -12,3 +12,5 @@ jobs:
                 echo $GITHUB_SHA
                 echo $GITHUB_REPOSITORY
                 echo $GITHUB_WORKSPACE
+                echo $GITHUB_ACTOR
+                echo $secrets.GITHUB_TOKEN
